--- a/src/views/views.condicionesc.ejs
+++ b/src/views/views.condicionesc.ejs
@@ -14,9 +14,17 @@
             <%- include('./components/menu'); %>
             <div class="content col-md-10" id="section1">
                 <div class="">
-                    <div class=" fw-bold mt-3">Duración de los Tokens</div>
-                    <input type="text" class="t1 px-3 rounded border-0 mt-3" placeholder="1" id="tiempoT" >
-                    <input type="text" class="t2 px-3 rounded border-0 mt-3" placeholder="min" id="medidaT">
+                    <div class="fw-bold mt-3">Duración de los Tokens</div>
+                <div class="d-flex mt-3">
+                    <input type="number" class="form-control me-2" placeholder="1" id="tiempoT" style="width: 10%;">
+                    <select class="form-select" id="medidaT" style="width: 10%;">
+                        <option value="m">Minutos</option>
+                        <option value="h">Horas</option>
+                        <option value="d">Días</option>
+                        <option value="w">Semanas</option>
+                        <option value="y">Años</option>
+                    </select>
+                </div>
                     <div class="fw-bold mt-3">Frecuencia Copia de Seguridad</div>
                     <input type="text" class="t3 mx-auto px-3 rounded border-0 mt-3" placeholder="Semanal" >
                     <div class="fw-bold mt-3">Complejidad de las Contraseñas</div>
@@ -50,15 +58,6 @@
         </div>
     </div>
 </body>
-<script>
-    document.querySelectorAll('.btn-primary').forEach(button => {
-    button.addEventListener('click', () => {
-        const dropdownId = button.id.replace('button', 'dropdown');
-        const dropdown = document.getElementById(dropdownId);
-        dropdown.style.display = dropdown.style.display === 'none' ? 'flex' : 'none';
-    });
-});
-
-</script>
+<script src="/js/complejidad-contras.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
