--- a/src/views/views.login.ejs
+++ b/src/views/views.login.ejs
@@ -12,8 +12,8 @@
             <form class="formulario">
                 <h1>BIENVENIDO A ERP</h1>
                 
-                <input type="text" placeholder="Ingrese su correo o usuario" required>
-                <input type="password" placeholder="Ingrese su contraseña" required>
+                <input type="text" class="usuario" placeholder="Ingrese su correo o usuario" required>
+                <input type="password" class="contrasena" placeholder="Ingrese su contraseña" required>
                 <input class="boton" type="submit" value="Ingresar">
                 <p>Recuperar usuario <a href="/correo">AQUI</a></p>
                 <p>Recuperar contraseña <a href="/correo">AQUI</a></p>
@@ -31,4 +31,5 @@
             </form>
         </div>
     </body>
+<script src="/js/login.js"></script>
 </html>
