--- a/src/views/views.panel.ejs
+++ b/src/views/views.panel.ejs
@@ -31,6 +31,7 @@
                     <table class="table">
                         <thead>
                             <tr>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">ID</th>
                                 <th style="background-color: #1E3DEA; color: white;" scope="col">Nombre</th>
                                 <th style="background-color: #1E3DEA; color: white;" scope="col">Apellido</th>
                                 <th style="background-color: #1E3DEA; color: white;" scope="col">Celular</th>
@@ -43,19 +44,20 @@
                         <tbody>
                             <% users.body.forEach(user => { %>
                                 <tr class="table-active">
+                                    <td class="id_usuario"><%= user.ID %></td>
                                     <td><%= user.Nombre.split(' ')[0] %></td> 
                                     <td><%= user.Nombre.split(' ')[1] || '' %></td> 
                                     <td><%= user.Correo %></td> 
                                     <td>****</td> 
                                     <td>    
                                         <select class="form-select">
-                                            <option value="Usuario" <%= user.Rol === 'Usuario' ? 'selected' : '' %>>Usuario</option>
-                                            <option value="Invitado" <%= user.Rol === 'Invitado' ? 'selected' : '' %>>Invitado</option>
-                                            <option value="Moderador" <%= user.Rol === 'Moderador' ? 'selected' : '' %>>Moderador</option>
-                                            <option value="Administrador" <%= user.Rol === 'Administrador' ? 'selected' : '' %>>Administrador</option>
+                                            <option value="2" <%= user.Rol === 'Usuario' ? 'selected' : '' %>>Usuario</option>
+                                            <option value="4" <%= user.Rol === 'Invitado' ? 'selected' : '' %>>Invitado</option>
+                                            <option value="3" <%= user.Rol === 'Moderador' ? 'selected' : '' %>>Moderador</option>
+                                            <option value="1" <%= user.Rol === 'Administrador' ? 'selected' : '' %>>Administrador</option>
                                         </select>
                                     </td>
-                                    <td><%= user.Estado %></td> <!-- Estado -->
+                                    <td class="estado"><%= user.Estado %></td>
                                     <td>
                                         <div class="btn-group" role="group">
                                             <button style="background-color: black;" type="button" class="btn btn-key btn-sm btn-custom btn-group-custom" data-bs-toggle="modal" data-bs-target="#permissionsModal">
@@ -198,17 +200,9 @@
     </div>
     <input type="text" hidden value="<%= url %>" class="id">
 </div>
-    <script src="/js/botones.js"></script>  
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
     <script src="/js/dropdown-panel.js"></script>
-    <script>
-        const url = document.querySelector(".id").value
-        localStorage.setItem("url", url)
-        const btnAdd = document.querySelector(".agregar")
-        btnAdd.addEventListener("click", () => {
-            window.location.href = "/registro"
-        })
-    </script>
+    <script src="/js/panel.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
