--- a/src/views/views.registro.ejs
+++ b/src/views/views.registro.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/politicas.css">
     <title>Login</title>
+    <!-- Agregar el script de reCAPTCHA -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
     <div class="caja_segundaria">
@@ -26,7 +28,10 @@
                 </label>
             </div>
             
-            <input class="boton" type="button" value="Continuar">
+            <!-- Añadir el widget de reCAPTCHA -->
+            <div class="g-recaptcha" data-sitekey="6LehqjMqAAAAAFyuvGgqBC_Jt46wMvAcNWwuTn_L"></div>
+
+            <input class="boton" type="submit" value="Continuar">
         </div>
     </div>
 </body>
