--- a/src/public/css/perfil.css
+++ b/src/public/css/perfil.css
@@ -70,8 +70,17 @@ nav{
     margin: 20px;
 }
 /* botnores */
-.btn{
+.btna{
     width: 300px;
+    height: 40px;
+    cursor: pointer;
+    border-radius: 10px;
+    border: none;
+    color: white;
+    
+}
+.bta{
+    width: 150px;
     height: 40px;
     cursor: pointer;
     border-radius: 10px;
@@ -94,12 +103,36 @@ nav{
     background-color: #D9D9D9;
     color: black;
 }
-.btn:hover,
-.btn:focus{
+.btna:hover,
+.btna:focus{
     box-shadow: 0 0 5px rgba(12, 12, 12, 0.932); 
     transition: .3s;
     outline: none; 
 }
+.accesos{
+    width: 600px;
+    height: 200px;
+    /* background-color: #C90000; */
+    border-bottom-left-radius:10px ;
+    border-bottom-right-radius:10px ;
+    display: none;
+}
+
+.accesos > table{
+    text-align: center;
+    
+
+}
+
+.accesos > .table > .head__acce{
+    background-color: #394DC0 !important;
+
+}
+.bx{
+    margin-left: 200px;
+    transition: transform 0.3 ease;
+}
+
 
 /* notifiacion */
 .caja__notifica{
@@ -144,6 +177,7 @@ nav{
 }
 .active{
     display: block;
+    transition: 1s ease-in-out;
 }
 
 .toggle-container {
