--- a/src/views/views.perfil.ejs
+++ b/src/views/views.perfil.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accesos</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/perfil.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -38,7 +39,7 @@
         <div class="main__perfil">
             <div class="main__img">
                 <div class="img__foto">
-                    <img src="/foto.webp" alt="" class="circulo">
+                    <img src="../img/apple.png" alt="" class="circulo">
                     <div class="circulo__usuario">
                         <div class="nom">
                             <p>{Usuario}</p>
@@ -51,26 +52,48 @@
                     
                 <div class="perfil__btn">
                     <div class="arriba">
-                        <button class="btn btn--azul">Cambiar Contraseña</button>
-                        <button class="btn btn--rojo">Eliminar Cuenta</button>
+                        <button class="btna btn--azul">Cambiar Contraseña</button>
+                        <button class="btna btn--rojo">Eliminar Cuenta</button>
                     </div>
                     <div class="abajo">
-                        <select name="" id="accesos" class="btn btn--gris">
-                            <option value="0">Seleccione</option>
-                            <option value="1">eccione</option>
-                            <option value="2">Selcione</option>
-                        </select>
-                        <button class="btn btn--azul">Editar Cuentas</button>
+                        <button class="btna btn--gris" id="btna">
+                            Accesos
+                            <i class='bx bxs-down-arrow'></i>
+                        </button>
+                        <button class="btna btn--azul">Editar Cuentas</button>
+                    </div>
+                    <div class="accesos" id="acceso">
+                        <table class="table table-bordered border-dark">
+                            <thead class="head__acce">
+                                <tr>
+                                    <th>Fecha</th>
+                                    <th>Acción</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>{1/09/2024}</td>
+                                    <td>
+                                        <button class="bta btn--azul">Detalles</button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>{1/09/2024}</td>
+                                    <td>
+                                        <button class="bta btn--azul">Detalles</button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
+
             </div>
             
         </div>
 
-        <!-- <div class="main__opc">
-              
-        </div> -->
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 <script>
     const abrir = document.getElementById('abrir');
@@ -91,13 +114,10 @@
       }
     });
 
-    // document.addEventListener('DOMContentLoaded', ()=>{
-    //     const notificaciones = document.getElementById('notificaciones');
-    // if (notificaciones) {
-    //     notificaciones.style.display = '';
-    // }
-    // })
-
-
+const acceso = document.getElementById('btna');
+const abriracceso = document.getElementById('acceso');
+acceso.addEventListener('click', () =>{
+    abriracceso.classList.toggle('active')
+})
 </script>
 </html>
