--- a/src/public/css/verificacionDoble2.css
+++ b/src/public/css/verificacionDoble2.css
@@ -57,6 +57,8 @@ transform: translate(550px);
     width: 100%;
     height: 75%;
     padding: 5px;
+    padding-left: 50px;
+    padding-top: 30px;
 }
 
 .contenedor2__p1{
