--- a/src/views/views.dispositivos.ejs
+++ b/src/views/views.dispositivos.ejs
@@ -136,6 +136,7 @@
                             <tr>
                                 <th style="background-color: #1E3DEA; color: white;" scope="col">Dirección</th>
                                 <th style="background-color: #1E3DEA; color: white;" scope="col">Dispositivo</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Navegador</th>
                                 <th style="background-color: #1E3DEA; color: white;" scope="col">Ubicación</th>
                                 <th style="background-color: #1E3DEA; color: white;" scope="col">Fecha</th>
                                 <th style="background-color: #1E3DEA; color: white;" scope="col">Hora</th>
@@ -145,6 +146,7 @@
                             <tr class="table-active">
                                 <td>192.16.33.102</td>
                                 <td>Iphone 8</td>
+                                <td>Safari</td>
                                 <td>Brasil</td>
                                 <td>22/08/2024</td>
                                 <td>15:05</td>
@@ -153,6 +155,7 @@
                             <tr>
                                 <td>192.16.33.102</td>
                                 <td>Samsung</td>
+                                <td>Chrome</td>
                                 <td>Rusia</td>
                                 <td>23/06/2024</td>
                                 <td>8:44</td>
@@ -162,6 +165,7 @@
                             <tr>
                                 <td>192.16.33.102</td>
                                 <td>Techno 5</td>
+                                <td>Opera</td>
                                 <td>Haití</td>
                                 <td>29/05/2024</td>
                                 <td>4:05</td>
