--- a/src/views/views.nuevaClave.ejs
+++ b/src/views/views.nuevaClave.ejs
@@ -9,7 +9,7 @@
   <body>
     <div class="containerBlur">
       <div class="containerCaja">
-        <h1 class="tituloCaja">Recuperar Contraseña</h1>
+        <h1 class="tituloCaja">Restablecer Contraseña</h1>
         <p class="mensaje">Ingrese la nueva contraseña</p>
         <div class="containerCampo">
           <input
