--- a/src/public/css/dispositivos.movil.css
+++ b/src/public/css/dispositivos.movil.css
@@ -1,24 +1,25 @@
-.center-end{
+.center-end {
     display: flex;
     justify-content: end;
     align-items: center;
 }
 
-/* .one_divice{
-    width: 30%;
-    /* height: 80px; 
-} */
+.center-start {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
 
-/* .icon-phone{
-    height: 100%;
-} */
-
-/* .name-device{
-    height: 40%;
-} */
-
-.center{
+.center {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.btn-salir,
+.btn-habilitar {
+    width: 45%;
+    background: #D9D9D9;
+    height: 79%;
+    cursor: pointer;
 }
