--- a/src/views/views.dispositivos.movil.ejs
+++ b/src/views/views.dispositivos.movil.ejs
@@ -24,6 +24,7 @@
         <p class="devices_movil h5 col-sm-5 col-md-5 col-lg-5 text-secondary mt-4 ms-3">Accediste a tu cuenta en estos dispositivos</p>
     </div>
 
+    <!-- todos los dispositivos  -->
     <div class="devices_movil row d-flex flex-wrap p-3">
 
         <!-- un dispositivo  -->
@@ -31,110 +32,150 @@
 
             <div class="devices_movil row border border-black rounded">
 
-                <div class="devices_movil icon-phone col-sm-3 col-md-3 col-lg-3 center">
+                 <div class="devices_movil icon-phone col-sm-3 col-md-3 col-lg-3 center">
                     <i class="devices_movil bi bi-phone-fill display-4" ></i>
                 </div>
 
-                <div class="devices_movil col-sm-9 col-md-9 col-lg-9 p-0">
-                    <p class="devices_movil mt-3 fs-6 ">Android <br> Colombia</p>
-                    <div class="devices_movil center d-flex justify-content-between p-2">
+                <div class="devices_movil col-sm-9 col-md-9 col-lg-9"> 
 
-                        <div class="devices_movil col-sm-5 col-md-5 col-lg-5 m-0 rounded center" style="width: 45%; background: #D9D9D9;">
-                            <i class="devices_movil bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
-                            <p class="devices_movil mt-2">Salir</p>
+                    <div class="devices_movil row">
+                         <div class="devices_movil col-12 py-2">
+                            <p class="devices_movil fs-5 my-2"> Android <br> Colombia</p>
                         </div>
-                        <div class="devices_movil col-sm-7 col-md-7 col-lg-7 rounded center" style="width: 45%; background: #D9D9D9;">
-                            <i class="devices_movil bi bi-check2-square fs-6 me-2"></i>
-                            <p class="devices_movil mt-2">Habilitar</p>
+                        
+                        <div class="devices_movil col-12 center d-flex justify-content-between p-2">
+
+                            <div class="devices_movil col-sm-5 col-md-5 col-lg-5 rounded center-start ps-2 btn-salir" id="salir" onclick="salir()">
+                                
+                                <i class="devices_movil bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
+                                <div class="devices_movil">Salir</div>
+
+                            </div>
+                            <div class="devices_movil col-sm-7 col-md-7 col-lg-7 rounded center-start p-2 btn-habilitar" id="habilitar" onclick="habilitar()">
+
+                                <i class="devices_movil bi bi-check2-square fs-6 me-2"></i>
+                                <div class="devices_movil">Habilitar</div>
+
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
         <!-- un dispositivo  -->
         <div class="devices_movil one_divice col-sm-12 col-md-3 col-lg-3 mt-4 mx-4">
 
             <div class="devices_movil row border border-black rounded">
 
-                <div class="devices_movil icon-phone col-sm-3 col-md-3 col-lg-3 center">
+                 <div class="devices_movil icon-phone col-sm-3 col-md-3 col-lg-3 center">
                     <i class="devices_movil bi bi-phone-fill display-4" ></i>
                 </div>
 
-                <div class="devices_movil col-sm-9 col-md-9 col-lg-9 p-0">
-                    <p class="devices_movil mt-3 fs-6 ">Android <br> Colombia</p>
-                    <div class="devices_movil center d-flex justify-content-between p-2">
+                <div class="devices_movil col-sm-9 col-md-9 col-lg-9"> 
 
-                        <div class="devices_movil col-sm-5 col-md-5 col-lg-5 m-0 rounded center" style="width: 45%; background: #D9D9D9;">
-                            <i class="devices_movil bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
-                            <p class="devices_movil mt-2">Salir</p>
+                    <div class="devices_movil row">
+                         <div class="devices_movil col-12 py-2">
+                            <p class="devices_movil fs-5 my-2"> Android <br> Colombia</p>
                         </div>
-                        <div class="devices_movil col-sm-7 col-md-7 col-lg-7 rounded center" style="width: 45%; background: #D9D9D9;">
-                            <i class="devices_movil bi bi-check2-square fs-6 me-2"></i>
-                            <p class="devices_movil mt-2">Habilitar</p>
+                        
+                        <div class="devices_movil col-12 center d-flex justify-content-between p-2">
+
+                            <div class="devices_movil col-sm-5 col-md-5 col-lg-5 rounded center-start ps-2 btn-salir" id="salir" onclick="salir()">
+                                
+                                <i class="devices_movil bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
+                                <div class="devices_movil">Salir</div>
+
+                            </div>
+                            <div class="devices_movil col-sm-7 col-md-7 col-lg-7 rounded center-start p-2 btn-habilitar" id="habilitar" onclick="habilitar()">
+
+                                <i class="devices_movil bi bi-check2-square fs-6 me-2"></i>
+                                <div class="devices_movil">Habilitar</div>
+
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
         <!-- un dispositivo  -->
         <div class="devices_movil one_divice col-sm-12 col-md-3 col-lg-3 mt-4 mx-4">
 
             <div class="devices_movil row border border-black rounded">
 
-                <div class="devices_movil icon-phone col-sm-3 col-md-3 col-lg-3 center">
+                 <div class="devices_movil icon-phone col-sm-3 col-md-3 col-lg-3 center">
                     <i class="devices_movil bi bi-phone-fill display-4" ></i>
                 </div>
 
-                <div class="devices_movil col-sm-9 col-md-9 col-lg-9 p-0">
-                    <p class="devices_movil mt-3 fs-6 ">Android <br> Colombia</p>
-                    <div class="devices_movil center d-flex justify-content-between p-2">
+                <div class="devices_movil col-sm-9 col-md-9 col-lg-9"> 
 
-                        <div class="devices_movil col-sm-5 col-md-5 col-lg-5 m-0 rounded center" style="width: 45%; background: #D9D9D9;">
-                            <i class="devices_movil bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
-                            <p class="devices_movil mt-2">Salir</p>
+                    <div class="devices_movil row">
+                         <div class="devices_movil col-12 py-2">
+                            <p class="devices_movil fs-5 my-2"> Android <br> Colombia</p>
                         </div>
-                        <div class="devices_movil col-sm-7 col-md-7 col-lg-7 rounded center" style="width: 45%; background: #D9D9D9;">
-                            <i class="devices_movil bi bi-check2-square fs-6 me-2"></i>
-                            <p class="devices_movil mt-2">Habilitar</p>
+                        
+                        <div class="devices_movil col-12 center d-flex justify-content-between p-2">
+
+                            <div class="devices_movil col-sm-5 col-md-5 col-lg-5 rounded center-start ps-2 btn-salir" id="salir" onclick="salir()">
+                                
+                                <i class="devices_movil bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
+                                <div class="devices_movil">Salir</div>
+
+                            </div>
+                            <div class="devices_movil col-sm-7 col-md-7 col-lg-7 rounded center-start p-2 btn-habilitar" id="habilitar" onclick="habilitar()">
+
+                                <i class="devices_movil bi bi-check2-square fs-6 me-2"></i>
+                                <div class="devices_movil">Habilitar</div>
+
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
         <!-- un dispositivo  -->
         <div class="devices_movil one_divice col-sm-12 col-md-3 col-lg-3 mt-4 mx-4">
 
             <div class="devices_movil row border border-black rounded">
 
-                <div class="devices_movil icon-phone col-sm-3 col-md-3 col-lg-3 center">
+                 <div class="devices_movil icon-phone col-sm-3 col-md-3 col-lg-3 center">
                     <i class="devices_movil bi bi-phone-fill display-4" ></i>
                 </div>
 
-                <div class="devices_movil col-sm-9 col-md-9 col-lg-9 p-0">
-                    <p class="devices_movil mt-3 fs-6 ">Android <br> Colombia</p>
-                    <div class="devices_movil center d-flex justify-content-between p-2">
+                <div class="devices_movil col-sm-9 col-md-9 col-lg-9"> 
 
-                        <div class="devices_movil col-sm-5 col-md-5 col-lg-5 m-0 rounded center" style="width: 45%; background: #D9D9D9;">
-                            <i class="devices_movil bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
-                            <p class="devices_movil mt-2">Salir</p>
+                    <div class="devices_movil row">
+                         <div class="devices_movil col-12 py-2">
+                            <p class="devices_movil fs-5 my-2"> Android <br> Colombia</p>
                         </div>
-                        <div class="devices_movil col-sm-7 col-md-7 col-lg-7 rounded center" style="width: 45%; background: #D9D9D9;">
-                            <i class="devices_movil bi bi-check2-square fs-6 me-2"></i>
-                            <p class="devices_movil mt-2">Habilitar</p>
+                        
+                        <div class="devices_movil col-12 center d-flex justify-content-between p-2">
+
+                            <div class="devices_movil col-sm-5 col-md-5 col-lg-5 rounded center-start ps-2 btn-salir" id="salir" onclick="salir()">
+                                
+                                <i class="devices_movil bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
+                                <div class="devices_movil">Salir</div>
+
+                            </div>
+                            <div class="devices_movil col-sm-7 col-md-7 col-lg-7 rounded center-start p-2 btn-habilitar" id="habilitar" onclick="habilitar()">
+
+                                <i class="devices_movil bi bi-check2-square fs-6 me-2"></i>
+                                <div class="devices_movil">Habilitar</div>
+
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 
     
 
     <!-- framework bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- custom script  -->
+     <script src="./js/dispositivos.movil.js"></script>
+    <!-- sweetalert script  -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
