--- a/src/views/views.cuentas.bloqueadas.ejs
+++ b/src/views/views.cuentas.bloqueadas.ejs
@@ -4,31 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administrador - Cuentas bloqueadas</title>
-    <link rel="stylesheet" href="/css/bloqueos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/panel.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
-<body class="container">
-    <div class="col-4 bg-success">
-        <%- include("partials/partial.barralatera.ejs") %>
-    </div>
-    <div class="col-8 bg-danger">
-        <div class="container-fluid">
-        
-            <h1>ADMINISTRADOR</h1>
-            <h2>Cuentas bloqueadas</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Nombre</th>
-                        <th>Apellido</th>
-                        <th>Contraseña</th>
-                        <th>Rol</th>
-                        <th>Estado</th>
-                        <th>Acción</th>
-                    </tr>
-                </thead>
-            </table>
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <%- include('./components/menu'); %>
+            <div class="content col-md-10">
+                <div class="row mb-4 header-row">
+                    <div class="col-12 d-flex">
+                        <div class="row w-100">
+                            <div class="col-12">
+                                <h1>Cuentas Bloqueadas</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">ID</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Nombre</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Apellido</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Celular</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Contraseña</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Rol</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Estado</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% users.body.forEach(user => { %>
+                                <tr class="table-active">
+                                    <td class="id_usuario"><%= user.ID %></td>
+                                    <td><%= user.Nombre.split(' ')[0] %></td> 
+                                    <td><%= user.Nombre.split(' ')[1] || '' %></td> 
+                                    <td><%= user.Correo %></td> 
+                                    <td>****</td> 
+                                    <td>    
+                                        <select class="form-select">
+                                            <option value="2" <%= user.Rol === 'Usuario' ? 'selected' : '' %>>Usuario</option>
+                                            <option value="4" <%= user.Rol === 'Invitado' ? 'selected' : '' %>>Invitado</option>
+                                            <option value="3" <%= user.Rol === 'Moderador' ? 'selected' : '' %>>Moderador</option>
+                                            <option value="1" <%= user.Rol === 'Administrador' ? 'selected' : '' %>>Administrador</option>
+                                        </select>
+                                    </td>
+                                    <td class="estado"><%= user.Estado %></td>
+                                    <td>
+                                        <div class="btn-group" role="group">
+                                            <button style="background-color: black;" type="button" class="btn btn-key btn-sm btn-custom btn-group-custom" data-bs-toggle="modal" data-bs-target="#permissionsModal">
+                                                <i class="fa-solid fa-key"></i>
+                                            </button>
+                                            <button style="background-color: blue;" type="button" class="btn btn-edit btn-sm">
+                                                <i class="fa-solid fa-pen"></i>
+                                            </button>
+                                            <button style="background-color: red;" type="button" class="btn btn-delete btn-sm">
+                                                <i class="fa-solid fa-trash"></i>
+                                            </button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <% }); %>
+                        </tbody>
+                    </table>
+                </div>
         </div>
     </div>
+    </div>
     <script src="/js/cuenta-bloqueo.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
