--- a/src/public/css/perfil.css
+++ b/src/public/css/perfil.css
@@ -1,15 +1,16 @@
-*{
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');*{
     padding: 0;
     margin: 0;
     font-size: 16px;
-    font-family: 'Corbel';
+    font-family: "Inter", sans-serif;
 
 }
 
-@font-face {
-    font-family: 'Corbel';
-    src: url(../font/CORBEL.TTF);
-}
+/* @font-face {
+    font-family: ;
+    src: url(../font/Inter-VariableFont_slnt\,wght.ttf);
+} */
 nav{
     background-color: #394DC0;
     width: 100%;
@@ -119,13 +120,11 @@ nav{
 }
 
 .accesos > table{
-    text-align: center;
-    
-
-}
-
-.accesos > .table > .head__acce{
-    background-color: #394DC0 !important;
+    text-align: center; 
+    border-collapse: separate;
+    border-radius: 7px;
+    overflow: hidden;
+    background-color: #000000;
 
 }
 .bx{
