--- a/src/views/views.perfil.ejs
+++ b/src/views/views.perfil.ejs
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/perfil.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
 </head>
 <body>
     <header>
@@ -60,7 +59,7 @@
                             Accesos
                             <i class='bx bxs-down-arrow'></i>
                         </button>
-                        <button class="btna btn--azul">Editar Cuentas</button>
+                        <button class="btna btn--azul">Editar Cuentas Bloqueadas</button>
                     </div>
                     <div class="accesos" id="acceso">
                         <table class="table table-bordered border-dark">
